# mkdocs

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
accidents/consignes/: index.html
dev/about/: index.html
dev/doc_as_code/: index.html
dev/poetry/: index.html
dev/tools/: index.html
docs/: index.md  toto.md
docs/accidents/: consignes.md
docs/dev/: about.md  doc_as_code.md  poetry.md  tools.md
search/: search_index.json
