[tool.poetry]
name = "my_mkdocs"
version = "0.1.0"
description = ""
authors = ["nicolas schlewitz <nicolas.schlewitz@orange.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "1.6.1"
mkdocs-material = "9.5.45"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
